phpipam-deployment.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: phpipam
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: phpipam-rs
  namespace: phpipam
  labels:
    net.phpipam.service: phpipam-rs
spec:
  replicas: 1
  selector:
    matchLabels:
      net.phpipam.service: phpipam-app
  template:
    metadata:
      labels:
        net.phpipam.service: phpipam-app
    spec:
      containers:
      - image: networkmgmt/phpipam:1.3
        name: phpipam-app
        ports:
        - containerPort: 9000
        volumeMounts:
        - mountPath: /var/www/html
          subPath: html
          name: nginx-html
      - image: mariadb:10.2
        name: phpipam-db
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          subPath: mysql
          name: mysql-data
      - image: nginx:1.13-alpine
        name: phpipam-nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /var/www/html
          subPath: html
          name: nginx-html
        - mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
          name: nginx-conf
          readOnly: true
      volumes:
      - name: nginx-html
        emptyDir: {}
      - name: nginx-conf
        configMap:
          name: phpipam-nginx-conf
      - name: mysql-data
        persistentVolumeClaim:
          claimName: phpipam-pv-claim
---
kind: Service
apiVersion: v1
metadata:
  labels:
    net.phpipam.service: phpipam-svc
  name: phpipam-svc
  namespace: phpipam
spec:
  ports:
  - port: 8080
    targetPort: 80
  selector:
    net.phpipam.service: phpipam-app
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: phpipam-ingress
  namespace: phpipam
spec:
  rules:
  - host: ipam.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: phpipam-svc
          servicePort: 8080
